--- a/.src/css/above/a11y.css
+++ b/.src/css/above/a11y.css
@@ -9,7 +9,7 @@ body {
 main, header, section, footer, figure, figcaption {
   display: block; }
 
-p {
+p, li {
   line-height: 1.75; }
 
 h1, h2 {
@@ -102,8 +102,10 @@ header {
 .header img {
   max-width: 100%;
   height: auto; }
+
 .header .u-url {
   display: none; }
+
 .header .icons-a11y {
   display: block;
   margin: 2em auto 0.5em;
@@ -112,8 +114,18 @@ header {
   background-color: #ff7f00;
   border-radius: 50%;
   white-space: nowrap; }
+
 .header p {
   line-height: 1; }
+
+.align-right {
+  text-align: center; }
+
+.nueww {
+  display: inline-block;
+  overflow: hidden;
+  text-indent: 200%;
+  white-space: nowrap; }
 
 .address {
   text-align: center;
@@ -125,11 +137,12 @@ header {
 .p-location {
   position: relative;
   text-align: left;
-  padding-left: 74px;
+  padding-left: 54px;
   display: inline-block;
   vertical-align: middle;
   margin: 0;
-  font-weight: 400; }
+  font-weight: 400;
+  background-size: contain; }
 
 .dateblock {
   position: relative;
@@ -148,13 +161,13 @@ header {
       left: 0;
       right: 0; }
   .dateblock .scheduled:before {
-    right: 84%; }
+    right: 92%; }
   .dateblock .scheduled:after {
-    left: 84%; }
+    left: 92%; }
   .dateblock .at:before {
-    right: 74%; }
+    right: 80%; }
   .dateblock .at:after {
-    left: 74%; }
+    left: 80%; }
 
 .dt-start {
   display: inline-block;
@@ -173,7 +186,6 @@ header {
 @keyframes blink {
   0% {
     opacity: 1; }
-
   50% {
     opacity: 0; } }
 
@@ -186,7 +198,7 @@ header {
     font-size: medium; }
   main {
     padding: 1em 0;
-    max-width: 46.66667em;
+    max-width: 46.66666666666667em;
     margin: 0 auto; }
   section {
     display: table;
@@ -207,6 +219,7 @@ header {
   header {
     position: relative; }
   .header {
+    position: relative;
     max-width: 710px;
     margin: 0 auto; }
     .header div.headblock {
@@ -223,19 +236,23 @@ header {
       .header h1:before, .header h1:after {
         content: '';
         position: absolute;
-        right: 70%;
+        right: 66%;
         left: 0;
         bottom: -0.38em;
         height: 9px;
         background-color: #fff; }
       .header h1:after {
         right: 0;
-        left: 70%; }
+        left: 66%; }
     .header .icons-a11y {
       position: absolute;
       top: 60px;
       left: 50%;
       margin-left: -100px; }
+  .align-right {
+    position: absolute;
+    top: 0;
+    right: 0; }
   .dateblock {
     width: 100%;
     text-align: center;
@@ -243,7 +260,7 @@ header {
     .dateblock p.scheduled {
       display: none; }
   .dt-start {
-    margin: -3em 0 0.2em 0;
+    margin: -3em 0 .2em 0;
     font-size: 2em;
     color: #ff7f00; }
   .at:before, .at:after {
