--- a/.src/sass/above/wide/_header.scss
+++ b/.src/sass/above/wide/_header.scss
@@ -3,6 +3,7 @@ header {
 }
 
 .header {
+    position: relative;
     max-width: 710px;
     margin: 0 auto;
     
@@ -24,7 +25,7 @@ header {
         &:after {
             content: '';
             position: absolute;
-            right: 70%;
+            right: 66%;
             left: 0;
             bottom: -0.38em;
             height: 9px;
@@ -32,7 +33,7 @@ header {
         }
         &:after {
             right: 0;
-            left: 70%;
+            left: 66%;
         }
     }
     
@@ -42,7 +43,13 @@ header {
         left: 50%;
         margin-left: -100px;
     }
-} 
+}
+
+.align-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
 
 .dateblock {
     width: 100%;
