--- a/.src/sass/above/_header.scss
+++ b/.src/sass/above/_header.scss
@@ -28,7 +28,7 @@ header {
 
     .icons-a11y {
         display: block;
-        margin: 2em auto 0.5em;
+        margin: 0 auto 0.5em;
         overflow: hidden;
         text-indent: 200%;
         background-color: $orange;
@@ -39,10 +39,6 @@ header {
     p {
         line-height: 1;
     }
-}
-
-.align-right {
-    text-align: center;
 }
 
 .nueww {
