--- a/css/a11y-above.css
+++ b/css/a11y-above.css
@@ -109,7 +109,7 @@ header {
 
 .header .icons-a11y {
   display: block;
-  margin: 2em auto 0.5em;
+  margin: 0 auto 0.5em;
   overflow: hidden;
   text-indent: 200%;
   background-color: #ff7f00;
@@ -118,9 +118,6 @@ header {
 
 .header p {
   line-height: 1; }
-
-.align-right {
-  text-align: center; }
 
 .nueww {
   display: inline-block;
