--- a/.src/sass/above/wide/_general.scss
+++ b/.src/sass/above/wide/_general.scss
@@ -2,10 +2,14 @@ header {
     padding: 2em;
 }
 
+h1 {
+    text-align: center;
+}
+
 h2 {
     text-align: left;
 }
-	
+
 .header {
    font-size: medium;
 }
