--- a/.src/css/above/a11y.css
+++ b/.src/css/above/a11y.css
@@ -56,6 +56,15 @@ footer {
     clip: rect(0, 0, 0, 0);
     top: 0;
     left: 0; }
+  footer a {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
 
 dt {
   float: left;
