--- a/css/a11y-above.css
+++ b/css/a11y-above.css
@@ -58,6 +58,14 @@ footer {
     clip: rect(0, 0, 0, 0);
     top: 0;
     left: 0; }
+  footer a {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
 
 dt {
   float: left;
