--- a/.src/sass/above/_header.scss
+++ b/.src/sass/above/_header.scss
@@ -68,12 +68,14 @@ header {
     background-size: contain;
 }
 
-
-.dateblock {
+.dateblock,
+.coc {
     position: relative;
     display: inline-block;
     margin: 2em auto;
+}
 
+.dateblock {
     .label {
         margin: 0;
         font-size: 0.85em;
@@ -110,8 +112,16 @@ header {
     }
 }
 
+.coc {
+    color: $orange;
+}
+
 .dt-start {
     display: inline-block;
+}
+
+.coc,
+.dt-start {
     margin: 0.15em 0 0.2em 0;
     font-size: 2.5em;
     font-weight: 900;
