--- a/.src/slides/sass/_slides.scss
+++ b/.src/slides/sass/_slides.scss
@@ -102,6 +102,7 @@ h2::after {
 		width: 30%;
 	}
 }
+
 #hosts {
 	.person {
 		width: 50%;
@@ -119,8 +120,8 @@ h2::after {
 
 	.p-name {
 		font-weight: bold;
-		font-size: 200%;
-		margin: .8em;
+		font-size: 180%;
+		margin: .8em 0;
 		line-height: 1;
 	}
 
@@ -157,4 +158,9 @@ code {
 	background-color: $darkred;
 	color: $foreground;
 	padding: 0 .2em;
+}
+
+.feature {
+	font-weight: bold;
+	color: #FBB03B;
 }
