--- a/css/icons.svg-sprite.css
+++ b/css/icons.svg-sprite.css
@@ -1,5 +1,5 @@
-.icons-a11y, .icons-btconf, .icons-contentful, .icons-location, .icons-tollwerk {
-  background: url(css/icons/icons-0ee2588e.svg) no-repeat; }
+.icons-a11y, .icons-btconf, .icons-contentful, .icons-location, .icons-mindscreen, .icons-tollwerk {
+  background: url(css/icons/icons-d51d0885.svg) no-repeat; }
 
 .icons-a11y {
   background-position: 0 0; }
@@ -9,25 +9,32 @@
   height: 200px; }
 
 .icons-btconf {
-  background-position: 0 42.73504273504273%; }
+  background-position: 0 38.38771593090211%; }
 
 .icons-btconf-dims {
   width: 250.318px;
   height: 86px; }
 
 .icons-contentful {
-  background-position: 0 61.111111111111114%; }
+  background-position: 0 54.89443378119002%; }
 
 .icons-contentful-dims {
   width: 420.864px;
   height: 86px; }
 
 .icons-location {
-  background-position: 0 81.22270742358079%; }
+  background-position: 0 72.79843444227006%; }
 
 .icons-location-dims {
   width: 54px;
   height: 96px; }
+
+.icons-mindscreen {
+  background-position: 0 84.40188281123194%; }
+
+.icons-mindscreen-dims {
+  width: 350px;
+  height: 52.51px; }
 
 .icons-tollwerk {
   background-position: 0 100%; }
