--- a/css/a11y-above.css
+++ b/css/a11y-above.css
@@ -115,6 +115,10 @@ p {
   vertical-align: middle;
   margin-right: .2em; }
 
+.photo {
+  width: 100%;
+  height: auto; }
+
 header {
   padding: 2em 1em;
   text-align: center;
@@ -263,6 +267,9 @@ header {
     max-width: 46.66667em;
     margin: 1em auto 0;
     box-sizing: border-box; }
+    footer .support + address.icons-mindscreen {
+      background-position: 0 .85em;
+      padding-top: 6.2em; }
   header {
     position: relative; }
   .header {
@@ -283,14 +290,14 @@ header {
       .header h1:before, .header h1:after {
         content: '';
         position: absolute;
-        right: calc(50% + 2.1em);
+        right: calc(50% + 2.2em);
         left: 0;
         bottom: -0.38em;
         height: 9px;
         background-color: #fff; }
       .header h1:after {
         right: 0;
-        left: calc(50% + 2.1em); }
+        left: calc(50% + 2.2em); }
     .header .icons-a11y {
       position: absolute;
       top: 60px;
